[BUGFIX] Corrects issue with matrix-slider columns being too wide when added

--- a/app/assets/stylesheets/partials/_components.scss
+++ b/app/assets/stylesheets/partials/_components.scss
@@ -1412,7 +1412,7 @@ a.table--heading {
 // --------------------------
 // A unit that is one cell-width (any height)
 %matrix--wide {
-  width: $matrixCellWidth;
+  width: $matrixCellWidth - .5rem;
 }
 
 // A unit that is one cell-height (any width)
